fix spacing of h3s

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -59,6 +59,8 @@ body.bp {
     font-family:'PT Sans', Helvetica, 'Helvetica Neue', Arial, sans-serif;
     font-size:1.2em;
     font-weight:bold;
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
   }
   h4, h5 {
     font-family:'PT Sans', Helvetica, 'Helvetica Neue', Arial, sans-serif;
